samples/_failures_safe/1761702687_057c98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc71ced3.c: In function ‘main’:
./samples/SAFE/__tmp_fc71ced3.c:160:22: error: expected ‘;’ at end of input
  160 |                 event
      |                      ^
      |                      ;
./samples/SAFE/__tmp_fc71ced3.c:160:17: error: expected declaration or statement at end of input
  160 |                 event
      |                 ^~~~~
./samples/SAFE/__tmp_fc71ced3.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc71ced3.c:160:17: error: expected declaration or statement at end of input
